# websocket-tanks-game

./: .gitignore
src/: main.rs
src/networking_plugin/: mod.rs  server_connection.rs  websocket_client.rs
tanks-client/: Cargo.toml
tanks-client/assets/raw/tanks/: Blue_Base.aseprite
tanks-client/src/: main.rs
tanks-client/src/networking_plugin/: broadcast.rs  events.rs  listen.rs  mod.rs  server_connection.rs  websocket_client.rs
tanks-server/: Cargo.toml
tanks-server/src/: main.rs
tanks-server/src/networking/: broadcast.rs  client_connection.rs  listen.rs  mod.rs
tanks-shared/: Cargo.toml  build.rs
tanks-shared/src/: lib.rs
tanks-shared/src/game_manager/: events.rs  game_world.rs  mod.rs  player.rs  proto_serialization.rs
tanks-shared/src/proto_compiled/: entities.rs  mod.rs  network_messages.rs  state.rs
tanks-shared/src/protocol_buffers/: Headers.md  entities.proto  network_messages.proto  state.proto
