[package]
name = "tanks-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanks-shared = { path = "../tanks-shared"}
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
tokio = { version = "1.28.0", features = ["io-util", "macros",  "time", "sync", "net", "rt-multi-thread", "io-std"] }
url = "2.4.0"
crossbeam-channel = "0.5.8"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.11"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
