[package]
name = "tanks-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanks-shared = { path = "../tanks-shared"}
# Logging
env_logger = "0.10.0"
log = "0.4.19"

tokio = { version = "1.28.2", default-features = false, features = ["io-util", "macros",  "time", "sync", "net", "rt-multi-thread"] }
tokio-tungstenite = "0.19.0"
futures-util = "0.3.28"
tokio-native-tls = "0.3.1"
dotenv = "0.15.0"
